--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 body {
     background-color: antiquewhite;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
@@ -17,7 +20,7 @@ header {
     height: 20vh;
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 10px;
     align-items: center;
     justify-content: center;
 }
@@ -35,10 +38,12 @@ header p {
 main {
     height: 70vh;
     display: flex;
-    align-items: center;
+    
     justify-content: center;
     flex-direction: column;
+
     row-gap: 20px;
+    width: 600px ;
 }
 
 .container {
@@ -76,7 +81,7 @@ button:hover {
 
 .btn-wrapper {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     column-gap: 20px;
     
 }
@@ -88,3 +93,11 @@ footer {
     height: 10vh;
     padding-top: 3vh;
 }
+
+.grid-wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 15px;
+}
+
+
